fix: allow importing custom & multivalued properties with csv - EXO-65669 - Meeds-io/meeds#1070 (#2789)
When importing users with CSV format, this fix will allow importing
custom profile properties that are single valued, and multivalued
properties already built-in like phones, ims, urls etc ...
Some minor improvements were added to check and display importing errors
without redendency and check all field post importing them. Besides, it
avoids adding parent to profile settings when it has already a child,
and does not allow to add a child property under an already child one to
make sure we have just two levels of profile settings.